--- a/frontend/src/components/LandingPage/LandingPage_AnalysisTools/LandingPage_AnalysisTools.module.css
+++ b/frontend/src/components/LandingPage/LandingPage_AnalysisTools/LandingPage_AnalysisTools.module.css
@@ -115,8 +115,9 @@
 
 /* ============================ Box & Topbar ============================ */
 .boxWrapper {
-  position: relative;
+  position: fixed;
   z-index: 1;
+  /* margin-bottom: 100px; */
 }
 
 .boxImage {
